hard-gists/2c0d9e1a0012065bb56c/run.log
=== Docker Run Log for 2c0d9e1a0012065bb56c ===
Started at: Mi 29. Okt 13:25:48 CET 2025

[2025-10-29 13:25:49] START: Running container for 2c0d9e1a0012065bb56c
[2025-10-29 13:25:49] SUCCESS: Container e10231d2a6065b01a12f05ea0725f5aa9d92eb3982ee0ab38ca53c55b34c081d started for 2c0d9e1a0012065bb56c
=== Container logs for 2c0d9e1a0012065bb56c ===
  File "/snippet.py", line 47
    print scoped_token
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2c0d9e1a0012065bb56c ===
[2025-10-29 13:25:51] INFO: Container e10231d2a6065b01a12f05ea0725f5aa9d92eb3982ee0ab38ca53c55b34c081d has stopped
